--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>这是我使用github pages搭建的个人站点。</h1>
-</body>
-</html>
+---
+layout: default
+title: 我的Blog
+---
+{{ page.title }}
+
+最新文章
+
+{% for post in site.posts %}
+{{ post.date | date_to_string }} {{ post.title }}
+{% endfor %}
