--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@ layout: default
 
     {% for post in site.posts %}
     <div class="box" style="background-color:#{{post.color}}">
+        <!-- page.img 和 page.banner 取其一就行 -->
        {% if post.img %}
           <img class="feat-image" src={{ "/images/" | prepend: site.baseurl | append: post.img }} alt="{{post.title}}">
+       {% endif %}
+       {% if post.banner %}
+          <img class="feat-image" src="{{post.banner}}" alt="{{post.title}}">
        {% endif %}
           <div class="container">
             <h4>{{post.title}}</h4>
