--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <div id="grid" data-columns class="cols">
 
     {% for post in site.posts %}
-    <div class="box" style="background-color:#{{post.color}}" onclick="location='{{post.url | prepend: site.baseurl}}'">
+    <div class="box" style="background-color:#{{post.color}}">
         <!-- page.img 和 page.banner 取其一就行，img是取本地路径，banne是取远程地址 -->
        {% if post.img %}
           <img class="feat-image" src={{ "/images/" | prepend: site.baseurl | append: post.img }} alt="{{post.title}}">
@@ -13,7 +13,7 @@ layout: default
        {% if post.banner %}
           <img class="feat-image" src="{{post.banner}}" alt="{{post.title}}">
        {% endif %}
-          <div class="container">
+          <div class="container" onclick="location='{{post.url | prepend: site.baseurl}}'">
             <h3>{{post.title}}</h3>
             <p>{{post.description}}</p>
              <div class="action">{{ post.date | date: '%B %d, %Y' }}<a href="{{post.url | prepend: site.baseurl}}"><i class="fa fa-arrow-right" aria-hidden="true"></i></a></div> 
