--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@ layout: default
        {% if post.banner %}
           <img class="feat-image" src="{{post.banner}}" alt="{{post.title}}">
        {% endif %}
-          <div class="container" onclick="location='{{post.url | prepend: site.baseurl}}'">
+          <div class="container">
             <h3>{{post.title}}</h3>
             <p>{{post.description}}</p>
-             <div class="action">{{ post.date | date: '%B %d, %Y' }}<a href="{{post.url | prepend: site.baseurl}}"><i class="fa fa-arrow-right" aria-hidden="true"></i></a></div> 
+             <div class="action" onclick="location='{{post.url | prepend: site.baseurl}}'">{{ post.date | date: '%B %d, %Y' }}<a href="{{post.url | prepend: site.baseurl}}"><i class="fa fa-arrow-right" aria-hidden="true"></i></a></div> 
         </div>     
     </div>
    {% endfor %}
